Добавлено описание vulncontrol

--- a/inc/6-experiment.tex
+++ b/inc/6-experiment.tex
@@ -368,7 +368,58 @@ Root password is:   dirtyCowFun
 Enjoy! :-)
 \end{lstlisting}
 
-Стоимость одной лицензии KernelCare составляет 4\$/г.
-В облачной среде, где при каждой минуте простоя работы облачный провайдер теряет деньги, использование подобных технологий позволяет существенно уменьшить даунтайм серверов.
+В облачной среде, где при каждой минуте простоя поставщик облачных услуг теряет деньги, использование подобных технологий позволяет существенно уменьшить время простоя серверов.
+
+\subsection{Мониторинг уязвимостей в программном обеспечении}
+
+Для своевременного реагирования на уязвимости в ПО, используемом в облачной среде необходим их мониторинг.
+В ходе исследования различных открытых баз уязвимостей и систем мониторинга не было обнаружено автоматизированных инструментов, позволяющих интегрировать поиск уязвимостей в систему мониторинга.
+
+Для написания такой системы использовалась открытая база уязвимостей сайта www.cvedetails.com \cite{cvedetails}.
+Сайт cvedetails позволяет в ограниченном режиме получить доступ к базе посредством \hyperlink{rest}{REST} API.
+
+Возможна интеграция программы с любой системой мониторинга или запуском по расписанию.
+Существует поддержка указания даты поиска уязвимостей, по умолчанию скрипт ищет уязвимости на сегодняшний день:
+\begin{lstlisting}
+$ ./vulncontrol.py -d 2017-02-18 -m 5
+CVE-2017-6074 9.3 http://www.cvedetails.com/cve/CVE-2017-6074/
+CVE-2017-6001 7.6 http://www.cvedetails.com/cve/CVE-2017-6001/
+CVE-2017-5986 7.1 http://www.cvedetails.com/cve/CVE-2017-5986/
+Telegram alert are not sent
+\end{lstlisting}
+
+Программа получает данные от сайта в JSON-формате вида:
+\begin{lstlisting}
+{
+    "cve_id": "CVE-2017-5551",
+    "cvss_score": "3.6",
+    "cwe_id": "264",
+    "exploit_count": "0",
+    "publish_date": "2017-02-06",
+    "summary": "The simple_set_acl function in fs/posix_acl.c ...",
+    "update_date": "2017-02-09",
+    "url": "http://www.cvedetails.com/cve/CVE-2017-5551/"
+}
+\end{lstlisting}
+
+
+Поддерживается интеграция приложения с мессенджером Telegram (рис. \ref{tscreen}).
+
+\addimg{tscreen}{0.7}{Уведомление программы в Telegram}{tscreen}
+
+Описание кодов выхода программы представлено в табл. \ref{exitcodes}:
+\begin{table}[H]
+  \caption{Коды выхода программы}\label{exitcodes}
+  \begin{tabular}{|l|l|l|}
+  \hline Код & Сообщение & Отправлено в Telegram? \\
+  \hline 0 & Уязвимости не найдены & Нет \\
+  \hline 1 & Уязвимости найдены & Нет \\
+  \hline 2 & Уязвимости найдены & Да \\
+  \hline 3 & Уязвимости найдены & Нет, неверные токен и идентификатор \\
+  \hline
+  \end{tabular}
+\end{table}
+
+Программа представлена в прил. \hyperlink{app-a}{А}.
 
 \clearpage
