--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 \clearpage
 
 % Приложения
-%\input{inc/a-app} % Программа эксплуатации уязвимости CVE-2016-5195
+\input{inc/a-app} % Программа мониторинга уязвимостей в программном обеспечении
 %\input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
 
 \end{document}
