Почищен системный анализ + мелкие исправления

--- a/inc/6-experiment.tex
+++ b/inc/6-experiment.tex
@@ -376,7 +376,7 @@ Enjoy! :-)
 В ходе исследования различных открытых баз уязвимостей и систем мониторинга не было обнаружено автоматизированных инструментов, позволяющих интегрировать поиск уязвимостей в систему мониторинга.
 
 Для написания такой системы использовалась открытая база уязвимостей сайта www.cvedetails.com \cite{cvedetails}.
-Сайт cvedetails позволяет в ограниченном режиме получить доступ к базе посредством \hyperlink{rest}{REST} API.
+Сайт cvedetails позволяет в ограниченном режиме получить доступ к базе посредством \hyperlink{json}{JSON} API.
 
 Возможна интеграция программы с любой системой мониторинга или запуском по расписанию.
 Существует поддержка указания даты поиска уязвимостей, по умолчанию скрипт ищет уязвимости на сегодняшний день:
