Удалены extra и добавлено заключение

--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -14,6 +14,6 @@
 
 Конечная цель проектирования --- подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
 
-Выпускная квалификационная работа магистра изложена на ??? листах, включает ??? таблиц, ??? рисунков, ??? приложений, ??? литературных источников.
+Выпускная квалификационная работа магистра изложена на \pageref{LastPage} листах, включает 16 таблиц, 11 рисунков, 1 приложение, 36 литературных источников.
 
 \clearpage
