--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -1,7 +1,20 @@
 \anonsection{Заключение}
 
-Тут все понятно.
+В ходе выполнения выпускной квалификационной работы магистра были исследованы процессы обеспечения безопасности облачных сред.
 
-1 страница
+В ходе исследования были проанализированы существующие проблемы и стандарты безопасности облачных вычислений, предложены способы решения данных проблем.
+Рассмотрена специфика предоставления облачных услуг зарубежных и отечественных поставщиков.
+Проанализированы наиболее опасные уязвимости за 2016~г.
+
+В ходе системного анализа было описано системотехническое представление системы, описаны входные и выходные данные, составлен список функций системы безопасности, произведена декомпозиция системы и описана связь между ее элементами.
+
+В ходе вариантного анализа был произведен сравнительный анализ гипервизоров между тремя альтернативами, в ходе которого был выбран наиболее оптимальный вариант.
+
+В ходе экспериментальных исследования была эксплуатирована уязвимость CVE-2016-5195, благодаря которой локальный пользователь сервера получил доступ к правам суперпользователя.
+Скрипт не является законченным продуктом и распространяется под свободной лицензией.
+
+Для мониторинга уязвимостей в программном обеспечении облачной среды был разработан скрипт на языке программирования Python.
+Скрипт осуществляет поиск по открытой базе уязвимостей согласно установленным параметрам.
+Программа находится в открытом доступе и распространяется под открытой лицензией.
 
 \clearpage
