--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -1,4 +1,4 @@
-\section{Обзор литературных источников по тематике исследования}
+\section{Обзор литературных источников}
 
 Исторически, ситуация сложилась так, что слово <<облако>> используется в качестве метафоры сети Интернет.
 Позже, оно было использовано для изображения Интернет в компьютерных сетевых диаграммах и схемах.
