--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -80,7 +80,7 @@ DDoS также активно используется в атаках на Iaa
 
 Управление программным обеспечением для виртуализации относится к провайдеру, в то время как клиенты не имеют доступа к этому программному обеспечению, особенно если это публичное облако.
 Виртуализация аппаратного обеспечения или операционной системы позволяет совместно использовать ресурсы на нескольких гостевых виртуальных машинах одновременно и не мешая друг другу.
-Виртуализации уровня хоста может быть осуществлено с использованием гипервизоров первого уровня, таких как VMware ESX, Xen, Oracle VM, Hyper-V.
+Виртуализации уровня хоста может быть осуществлено с использованием гипервизоров первого уровня, таких как VMware ESXi, Xen, Oracle VM VirtualBox, Hyper-V.
 
 Клиенты имеют полный доступ к виртуальному экземпляру операционной системы, который виден из Интернета и изолирован от других экземпляров технологиями гипервизора.
 В таком случае безопасность и управление безопасностью лежит на пользователе.
