--- a/inc/6-experiment.tex
+++ b/inc/6-experiment.tex
@@ -288,7 +288,7 @@ diff --git a/fs/ecryptfs/kthread.c b/fs/ecryptfs/kthread.c
 \end{lstlisting}
 
 
-\subsection{Эксплуатация уязвимостии ядра Linux CVE-2016-5195 <<Dirty COW>>}
+\subsection{Эксплуатация уязвимостии ядра Linux CVE-2016-5195}
 
 Наиболее опасной уязвимостью 2016~г. является CVE-2016-5195 с кодовым именем <<Dirty COW>>.
 Такая степень опасности обусловлена тем, что ей подвержены практически все ядра Linux начиная с версии 2.6.22, а также легкостью применения эксплоитов.
