--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 
 \input{inc/0-intro} % Введение
 \input{inc/1-pz} % Постановка задачи
-\input{inc/2-literature} % Обзор литературных источников по тематике исследования
+\input{inc/2-literature} % Обзор литературных источников
 \input{inc/3-sysanalyz} % Системный анализ
 \input{inc/4-varanalyz} % Вариантный анализ
 \input{inc/5-description} % Безопасность облачных вычислений
