Сокращено содержание, обеъдинены принципы модульности и связности

--- a/inc/3-sysanalyz.tex
+++ b/inc/3-sysanalyz.tex
@@ -63,27 +63,13 @@
   \item h --- обеспечение целостности данных пользователя.
 \end{itemize}
 
-\subsection{Принцип связности}
+\subsection{Принцип связности и модульности}
 
 Любая часть системы должна рассматриваться со всеми своими связями с окружающими ее объектами, как внешними по отношению ко всей системе, так и внутренними --- другими элементами системы.
 Если некоторая подсистема имеет связи только с внешней средой, то есть смысл реализовать ее в виде отдельной системы.
 Подсистема, не связанная ни с внешней средой, ни с другой подсистемой, является избыточной и должна быть удалена из системы.
 
-%Подсистема взаимодействия с пользователем представлена на рис. \ref{user-subsys}.
-%\addimg{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
-
-%Подсистема управления услугами представлена на рис. \ref{service-subsys}.
-%\addimg{service-subsys}{1}{Внутренние и внешние связи подсистемы управления услугами}{service-subsys}
-
-%Подсистема управления инфраструктурой представлена на рис. \ref{infrast-subsys}.
-%\addimg{infrast-subsys}{1}{Внутренние и внешние связи подсистемы управления инфраструктурой}{infrast-subsys}
-
-%Подсистема защиты и обеспечения целостности данных представлена на рис. \ref{security-subsys}.
-%\addimg{security-subsys}{1}{Внутренние и внешние связи подсистемы защиты и обеспечения целостности данных}{security-subsys}
-
-\subsection{Принцип модульности}
-
-В соответствии с этим принципом, выделение модулей системы, если таковые имеются, продуктивно и оправдано.
+В соответствии с принципом модульности, выделение модулей системы, если таковые имеются, продуктивно и оправдано.
 Под модулями здесь понимаются относительно автономные и достаточно простые блоки, выполняющие ограниченный набор функций.
 Модуль в отличие от подсистем, которые имеют нерегулярную структуру и, как правило, несут определенную функцию, частично отражающую функцию системы, имеет регулярную структуру и характерные для него внутренние и внешние связи.
 Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий.
@@ -134,7 +120,6 @@
 
 \subsection{Принцип иерархии}
 
-Полезно введение иерархии частей и их ранжирование, что упрощает разработку системы и устанавливает порядок рассмотрения частей.
 Разработка иерархий классов является нетривиальной задачей.
 Грамотно спроектированные иерархии классов позволяют создавать высокоэффективные системы, плохо спроектированная иерархия приводит к созданию сложных и запутанных систем.
 
@@ -191,8 +176,6 @@
 Сложные системы не всегда подчиняются вероятностным законам.
 В таких системах можно оценивать <<наихудшие>> ситуации и проводить рассмотрение для них.
 Этот способ обычно называют методом гарантируемого результата, он применим, когда неопределенность не описывается аппаратом теории вероятностей.
-
-При наличии информации о вероятностных характеристиках случайностей можно определять вероятностные характеристики выходов в системе.
 
 События и действия, некорректные с точки зрения правил функционирования системы:
 \begin{itemize}
