--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,4 +1,4 @@
-\appsection{Приложение А}{Программа мониторинга уязвимостей в программном обеспечении} \hypertarget{app-a}{\label{app-a}}
+\appsection{Приложение А} \hypertarget{app-a}{\label{app-a}}
 \centering{\uppercase{Министерство образования и науки Российской Федерации}}
 
 \centering{\uppercase{Федеральное государственное автономное образовательное учреждение высшего образования}}
