Добавлен анализ полученных результатов

--- a/inc/7-results.tex
+++ b/inc/7-results.tex
@@ -1,7 +1,44 @@
 \section{Анализ полученных результатов}
 
-Тут подводим итог работы.
+В ходе обзора литературных источников по тематике исследования было рассмотрено понятие облачных вычислений и их развитие, рассмотрены классификации облачных услуг, проанализированы существующие стандарты безопасности и организации, принимающие участие в разработке этих стандартов.
+Выполнен обзор наиболее известных поставщиков облачных услуг, рассмотрен российский рынок в период с 2014~г. по 2016~г.
+Составлен список основных угроз облачной безопасности и исследованы тенденции развития облачных вычислений.
 
-2 страницы выходит
+В ходе системного анализа была сформирована цель проектирования, разработан список функций проектируемой системы:
+\begin{itemize}
+  \item Ф1 --- авторизация и аутентификация пользователей;
+  \item Ф2 --- сетевая защита;
+  \item Ф3 --- идентификация и обработка инцидентов связанных с безопасностью;
+  \item Ф4 --- предоставление доступа к услугам;
+  \item Ф5 --- мониторинг.
+\end{itemize}
+
+Выделены подсистемы:
+\begin{enumerate}
+  \item подсистема аутентификации;
+  \item подсистема авторизации;
+  \item подсистема сетевой защиты;
+  \item подсистема проверки целостности данных.
+\end{enumerate}
+
+Определена схема взаимодействия между подсистемами.
+
+В соответствии с принципом функциональности составлена матрица инциденций функций системы и функций назначения подсистем.
+Произведена декомпозиция подсистем, определены стороны развития системы, определены события и действия, некорректные с точки зрения правил функционирования системы.
+
+В ходе вариантного анализа сравнивались альтернативы гипервизоров (KVM, Hyper-V, VMware vSphere) в соответствии с критериями цены, масштабируемости, отказоустойчивости и интерфейсов управления.
+Построены матрицы парных сравнений второго и третьего уровня, исследованы согласованности матриц.
+Синтезированы глобальные приоритеты альтернатив.
+В результате анализа наибольшее предпочтение решено было отдать альтернативе В (VMware vSphere), однако для более точного определения гипервизора, необходимо сравнивать значительно большее число критериев.
+
+В ходе исследований безопасности облачной среды были сформированы основные проблемы, рассмотрен жизненный цикл данных в облаке, рассмотрена облачная безопасность компании Google.
+
+В ходе экспериментальных исследований были проанализированы уязвимости 2016~г. в программном обеспечении, используемом в облачных вычислениях.
+Исследованы основные ошибки в программном коде продуктов и способы их исправления.
+
+Эксплуатирована уязвимость CVE-2016-5195, в ходе которой удалось получить права суперпользователя сервера, предложены способы защиты от уязвимостей в ядре Linux.
+
+Для мониторинга уязвимостей была написана программа, анализирующая данные из открытого источника уязвимостей.
+Данная программа может быть встроена в любую систему мониторинга и имеет возможность уведомлять системного администратора по Telegram.
 
 \clearpage
