--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -10,7 +10,7 @@
 Актуальность темы.
 В настоящее время наблюдается стремительное развитие облачных технологий, однако для эффективной работы облачной инфраструктуры требуется ее эффективная структура и организация.
 Зачастую небольшая команда, проектирующая облачную инфраструктуру не всегда может полностью учесть все аспекты безопасности, так как нет единого документа, стандартизующего механизмы обеспечения безопасности в облачной среде.
-Особенно остро вопрос безопасности встал в последнее время, в связи с обнаружением большого количества критичесих уязвимостей в программном обеспечении и протоколах, используемых поставщиками облачных услуг.
+Особенно остро вопрос безопасности встал в последнее время, в связи с обнаружением большого количества критических уязвимостей в программном обеспечении и протоколах, используемых поставщиками облачных услуг.
 
 Конечная цель проектирования --- подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
 
