--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -16,7 +16,7 @@
 
 \bibitem{var-analyz}
     Методические указания к расчетно-графическому заданию
-    на тему <<Метод анализа иерархий>>  по диcциплине <<Теория оптимальных решений>>
+    на тему <<Метод анализа иерархий>>  по дисциплине <<Теория оптимальных решений>>
     для студентов специальности 7.091501 <<Компьютерные системы и сети>>
     дневной и заочной формы обучения /
     Сост.: Ю.Н. Щепин -- Севастополь:
