--- a/inc/3-sysanalyz.tex
+++ b/inc/3-sysanalyz.tex
@@ -73,7 +73,7 @@
 Под модулями здесь понимаются относительно автономные и достаточно простые блоки, выполняющие ограниченный набор функций.
 Модуль в отличие от подсистем, которые имеют нерегулярную структуру и, как правило, несут определенную функцию, частично отражающую функцию системы, имеет регулярную структуру и характерные для него внутренние и внешние связи.
 Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий.
-Выделению модулей соответствует декопмозиция сложной задачи на множество более простых подзадач.
+Выделению модулей соответствует декомпозиция сложной задачи на множество более простых подзадач.
 
 Принцип модульности для разрабатываемой системы поясняется с помощью рис. \ref{modules}, описывающего разбиение на модули системы аутентификации.
 
