--- a/inc/6-experiment.tex
+++ b/inc/6-experiment.tex
@@ -171,7 +171,7 @@ diff --git a/net/packet/af_packet.c b/net/packet/af_packet.c
 \end{lstlisting}
 
 Уязвимость CVE-2016-4997 присутствует в подсистеме netfilter ядра Linux и связана с недоработкой в обработчике setsockopt IPT\_SO\_SET\_REPLACE и может быть использована в системах, использующих изолированные контейнеры \cite{netf}.
-Проблема проявляется при испоользовании пространств имен для изоляции сети и идентификаторов.
+Проблема проявляется при использовании пространств имен для изоляции сети и идентификаторов.
 
 В патче к уязвимости была добавлена дополнительная проверка адреса функции xt\_entry\_foreach():
 \begin{lstlisting}
@@ -235,8 +235,8 @@ diff --git a/scripts/local-top/cryptroot b/scripts/local-top/cryptroot
 +  done
 \end{lstlisting}
 
-Сотрудники компании Google выявили уязвимость CVE-2016-6309 в OpenSSL, подзволяющая злоумышленникам выполнить произвольный код при обработке отправленных ими пакетов.
-При получении сообщения размером больше 16 Кб, при перераспределении памяти остается висячий указатель на старое положение буфера и запись поступившего сообщения производится в уже ранее освобожденную область памяти \cite{openssl}.
+Сотрудники компании Google выявили уязвимость CVE-2016-6309 в OpenSSL, позволяющая злоумышленникам выполнить произвольный код при обработке отправленных ими пакетов.
+При получении сообщения размером больше 16~Кб, при перераспределении памяти остается висячий указатель на старое положение буфера и запись поступившего сообщения производится в уже ранее освобожденную область памяти \cite{openssl}.
 
 В патче опубликованном в сентябре 2016~г. исправлена проблема с висячим указателем:
 \begin{lstlisting}
@@ -260,7 +260,7 @@ diff --git a/ssl/statem/statem.c b/ssl/statem/statem.c
 
 Ядро Linux подвержено уязвимости CVE-2016-1583, благодаря которой существует возможность поднятия привилегий локальному пользователю при помощи eCryptfs.
 
-С помощью формирования рекурсивных вызовов в пространстве пользователя позможно добиться переполнения стека ядра.
+С помощью формирования рекурсивных вызовов в пространстве пользователя возможно добиться переполнения стека ядра.
 Злоумышленник может организовать цепочку рекурсивных отражений в память файла, при которой процесс отражает в свое окружения другие файлы \cite{ecryptfs}.
 При чтении содержимого файлов будет вызван обработчик pagefault для процессов, что приведет к переполнению стека.
 
@@ -288,12 +288,12 @@ diff --git a/fs/ecryptfs/kthread.c b/fs/ecryptfs/kthread.c
 \end{lstlisting}
 
 
-\subsection{Эксплуатация уязвимостии ядра Linux CVE-2016-5195}
+\subsection{Эксплуатация уязвимости ядра Linux CVE-2016-5195}
 
 Наиболее опасной уязвимостью 2016~г. является CVE-2016-5195 с кодовым именем <<Dirty COW>>.
 Такая степень опасности обусловлена тем, что ей подвержены практически все ядра Linux начиная с версии 2.6.22, а также легкостью применения эксплоитов.
 
-В данном разделе применяется эксплоит \cite{dcowexp}, позволяющий получить права суперпользоваться из-под локального пользователя.
+В данном разделе применяется эксплоит \cite{dcowexp}, позволяющий получить права суперпользователя из-под локального пользователя.
 
 Для эксплуатации используется дистрибутив CentOS:
 \begin{lstlisting}
