Добавлен сабмодуль для vulncontrol

--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -28,6 +28,6 @@
 
 \centering{2017}
 
-\lstinputlisting[numbers=left]{inc/src/vulncontrol.py}
+\lstinputlisting[numbers=left]{vulncontrol/vulncontrol.py}
 
 \clearpage
