--- a/preamble.tex
+++ b/preamble.tex
@@ -40,7 +40,7 @@
 
 % Пути к каталогам с изображениями
 \usepackage{graphicx} % Вставка картинок и дополнений
-\graphicspath{{images/}{extra/}}
+\graphicspath{{images/}}
 
 % Формат подрисуночных записей
 \usepackage{chngcntr}
@@ -204,13 +204,6 @@
     \addcontentsline{toc}{section}{\listtablename}
 }
 
-% Секции для приложений вида "Приложение А --- Имя приложения"
-%\newcommand{\appsection}[2]{
-%    \phantomsection
-%    \paragraph{\centerline{{#1}}}
-%    \addcontentsline{toc}{section}{{#1} --- {#2}}
-%}
-
 % Секции для приложений
 \newcommand{\appsection}[1]{
     \phantomsection
@@ -235,5 +228,5 @@
     }
 \makeatother
 
-\usepackage{lastpage} % Подсчет количества страниц, если нужно
+\usepackage{lastpage} % Подсчет количества страниц
 \setcounter{page}{4} % Начало нумерации страниц
