Несквозная нумерация таблиц

--- a/preamble.tex
+++ b/preamble.tex
@@ -44,7 +44,9 @@
 
 % Формат подрисуночных записей
 \usepackage{chngcntr}
+% Сбрасываем счетчик таблиц и рисунков в каждой новой главе
 \counterwithin{figure}{section}
+\counterwithin{table}{section}
 
 % Гиперссылки
 \usepackage{hyperref}
