--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -2,10 +2,10 @@
 
 Тема выпускной квалификационной работы магистра --- <<Исследование процессов обеспечения безопасности облачных сред>>.
 
-Ключевые слова: безопасность, виртуализация, защита информации, инфраструктура, облачные вычисления, провайдер, стандартизация, уязвимости.
+Ключевые слова: безопасность, виртуализация, защита информации, облачная инфраструктура, облачные вычисления, провайдер, стандартизация, уязвимости.
 
-В данной выпускной квалификационной работе магистра рассмотрены проблемы обеспечения безопасности облачных сред, а также даны решения по решению этих проблем.
-Для достижения поставленной цели был необходим детальный анализ работы облачных провайдеров, мировых стандартов безопасности для поставщиков облачных услуг, а также технические возможности эксплуатации уязвимостей в облачной среде на разных уровнях с целью компрометации данных пользователей или данных облачного провайдера.
+В данной выпускной квалификационной работе магистра рассмотрены проблемы обеспечения безопасности облачных сред, а также представлены примеры решения этих проблем.
+Для достижения поставленной цели был необходим детальный анализ работы облачных провайдеров, мировых стандартов безопасности для поставщиков облачных услуг, а также технические возможности эксплуатации уязвимостей в облачной среде на разных уровнях, с целью компрометации данных пользователей или данных облачного провайдера.
 
 Актуальность темы.
 В настоящее время наблюдается стремительное развитие облачных технологий, однако для эффективной работы облачной инфраструктуры требуется ее эффективная структура и организация.
