--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 % Author: Amet Umerov (admin@amet13.name)
 % https://github.com/Amet13/master-thesis
 
-\documentclass[a4paper,14pt]{extarticle} % 14й шрифт
+\documentclass[xetex,a4paper,14pt]{extarticle} % 14й шрифт
 \input{preamble} % Подключаем преамбулу
 
 %%% Начало документа
