--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -52,12 +52,9 @@
 
 %%% Картинки
 \usepackage{tikz}
-\usepackage{pgfplots,pgfplotstable}
 \usepackage{verbatim,calc,ifthen}
 
-\title{Иследование процессов обеспечения безопасности облачных сред}
-
-%%% Основные параметры презентации
+\title{Исследование процессов обеспечения безопасности облачных сред}
 \author[Умеров Амет]{Умеров Амет}
 \institute{}
 \date{}
