--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -10,9 +10,32 @@
 \frametitle{\insertsection}
 \framesubtitle{Но пока нет, пусть повисит график мунина}
 \begin{figure}[h]
-	\center
-	\includegraphics[width=\linewidth]{munin}
+    \center
+    \includegraphics[width=\linewidth]{munin}
 \end{figure}
 \end{frame}
 
 %-------------------------------------------------------------------------------
+
+\iffalse
+максимум 10 слайдов
+по 1 минуте на слайд
+картинки, схемы, таблицы, примеры кода, списки, скриншоты
+
+обзор источников
+системный анализ
+вариантный анализ
+безопасность облачных вычислений
+экспериментальные исследования
+- крит. уязвимости
+- эксплуатация dirty cow
+- vulncontrol
+анализ результатов
+
+1. описать актуальность исследования
+2. описать текущие проблемы в облаках
+3. как эти проблемы решаются
+4. какие проблемы не решаются
+5. что я сделал для решения проблем
+...
+\fi
