Добавлены черновые слайды презентации

--- a/inc/6-experiment.tex
+++ b/inc/6-experiment.tex
@@ -385,7 +385,7 @@ $ ./vulncontrol.py -d 2017-02-18 -m 5
 CVE-2017-6074 9.3 http://www.cvedetails.com/cve/CVE-2017-6074/
 CVE-2017-6001 7.6 http://www.cvedetails.com/cve/CVE-2017-6001/
 CVE-2017-5986 7.1 http://www.cvedetails.com/cve/CVE-2017-5986/
-Telegram alert are not sent
+Telegram alert not sent
 \end{lstlisting}
 
 Программа получает данные от сайта в JSON-формате вида:
