--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -13,7 +13,7 @@
 
 \defaultfontfeatures{Ligatures=TeX} % Для преобразования -- и ---
 \setmainfont{PT Sans}
-% \setmonofont{PT Mono}
+\setmonofont{PT Mono}
 
 %%% Beamer по-русски
 \newtheorem{rtheorem}{Теорема}
@@ -52,7 +52,7 @@
 
 %%% Картинки
 \usepackage{tikz}
-\usepackage{verbatim,calc,ifthen}
+\usepackage{calc,ifthen,color}
 
 \title{Исследование процессов обеспечения безопасности облачных сред}
 \author[Умеров Амет]{Умеров Амет}
