--- a/inc/4-varanalyz.tex
+++ b/inc/4-varanalyz.tex
@@ -18,7 +18,7 @@
   \item VMware vSphere (альтернатива В).
 \end{itemize}
 
-Критерии, по которым выбирается тот, или иной алгоритм:
+Критерии, по которым выбирается тот, или иной гипервизор:
 \begin{itemize}
   \item цена (А1);
   \item масштабируемость (А2);
