--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -4,20 +4,27 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Стандарты безопасности}
+\section{Стандарты безопасности в облаках}
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{Но пока нет, пусть повисит график мунина}
 
+Наиболее активные рабочие группы:
 \begin{itemize}
     \item Cloud Security Alliance (CSA)
-    \item Internet Engineering Task Force (IETF)
     \item National Institute of Standards and Technology (NIST)
-    \item International Telecommunications Union (ITU)
-    \item Open Cloud Consortium (OCC)
-    \item Object Management Group (OMG)
+    \item Internet Engineering Task Force (IETF)
     \item Open Data Center Alliance (ODCA)
+\end{itemize}
+
+\vspace{\baselineskip}
+
+Они занимаются:
+\begin{itemize}
+    \item продвижением идей соблюдения безопасности
+    \item исследованиями по защите облаков
+    \item разработкой руководств по безопасности
+    \item организацией форумов по безопасности
 \end{itemize}
 \end{frame}
 
@@ -27,7 +34,6 @@
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{Но пока нет, пусть повисит график мунина}
 
 \begin{itemize}
     \item утечка данных
@@ -45,23 +51,21 @@
 \end{itemize}
 \end{frame}
 
-% Расписать кратко по нескольким пунктам
-
 %-------------------------------------------------------------------------------
 
 \section{Борьба с проблемами}
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{Но пока нет, пусть повисит график мунина}
 
 \begin{itemize}
-    \item многофакторная аутентификация (2FA) и стойкое шифрование (TLS)
+    \item многофакторная аутентификация (2FA)
+    \item стойкое шифрование (TLS)
     \item использование одноразовых паролей, токенов, USB-ключей, смарт-карт
     \item контроль доступа, шифрование API
     \item периодические пентестинги, аудиты безопасности
     \item регулярное сканирование на наличие уязвимостией
-    \item тщательный мониторинг, аудит и логирование
+    \item мониторинг, аудит и логирование
     \item резервное копирование, репликация
     \item резервирование сетевых каналов и сегментация сети
 \end{itemize}
@@ -69,20 +73,19 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Что хочу решать я}
+\section{Решение проблем в рамках ВКР}
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{Но пока нет, пусть повисит график мунина}
 
 \begin{itemize}
-    \item структурирование всей имеющейся информации
-    \item системный анализ информации
-    \item с помощью метода анализа иерархий выбор альтернатив на основе набора критериев
-    \item практическое применение имеющейся информации
-    \item анализ наиболее опасных уязвимостей и методы взлома
-    \item использование уязвимости на проде
-    \item наискорейшие методы обнаружения уязвимостей в ПО (vulncontrol) и их закрытие (kernelcare)
+    \item структурирование имеющейся информации по безопасности
+    \item системный анализ полученной информации
+    \item выбор альтернатив согласно набору критериев (МАИ)
+    \item практическое применение полученной информации
+    \item анализ наиболее опасных уязвимостей
+    \item эксплуатация уязвимостей в облачной среде
+    \item создание методов быстрого реагирования на уязвимости
 \end{itemize}
 \end{frame}
 
@@ -92,15 +95,13 @@
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{1 2 3}
 
 \begin{itemize}
-    \item цель проектирования - разработка системы безопасности облачной среды
+    \item цель проектирования --- разработка системы безопасности облачной среды
     \item выделение входных и выходных данных
-    \item выделение функций
-    \item выделение подсистем: аутентификации, авторизации, сетевой защиты, проверки целостности данных
-    \item модульность системы
-    \item детализация функций
+    \item выделение функций и подсистем
+    \item организация модульности системы
+    \item детализация функций и подсистем
     \item соблюдение принципа иерархии
     \item сочетание централизации и децентрализации
     \item возможность расширения системы
@@ -115,50 +116,50 @@
 \begin{frame}
 \frametitle{\insertsection}
 \framesubtitle{Пример --- выбор гипервизора}
-Альтернативы:
-\begin{itemize}
-    \item KVM (альтернатива А)
-    \item Hyper-V (альтернатива Б)
-    \item VMware vSphere (альтернатива В)
-\end{itemize}
 
-Критерии, по которым выбирается тот, или иной алгоритм:
-\begin{itemize}
-    \item цена (А1)
-    \item масштабируемость (А2)
-    \item отказоустойчивость (А3)
-    \item интерфейсы управления (А4)
-\end{itemize}
+\begin{columns}
+    \begin{column}{0.45\textwidth}
+        Альтернативы:
+        \vspace{\baselineskip}
+        \begin{itemize}
+            \item KVM
+            \item Hyper-V
+            \item VMware vSphere
+        \end{itemize}
+    \end{column}
+    \begin{column}{0.55\textwidth}
+        Критерии выбора:
+        \begin{itemize}
+            \item цена (А1)
+            \item масштабируемость (А2)
+            \item отказоустойчивость (А3)
+            \item интерфейсы управления (А4)
+        \end{itemize}
+    \end{column}
+\end{columns}
 
-\begin{table}[H]
+\begin{table}
     \begin{tabular}{|l|l|l|l|l|l|}
-      \hline \multicolumn{2}{|c|}{Критерии} & A1 & A2 & A3 & A4 \\
-      \hline A1 & Цена & 1 & 1/5 & 1/7 & 3 \\
-      \hline A2 & Масштабируемость & 5 & 1 & 1/5 & 7 \\
-      \hline A3 & Отказоустойчивость & 7 & 5 & 1 & 8 \\
-      \hline A4 & Интерфейсы управления & 1/3 & 1/7 & 1/8 & 1 \\
+      \hline \multicolumn{2}{|c|}{\textbf{Критерии}} & \textbf{A1} & \textbf{A2} & \textbf{A3} & \textbf{A4} \\
+      \hline \textbf{A1} & Цена & \textbf{1} & 1/5 & 1/7 & 3 \\
+      \hline \textbf{A2} & Масштабируемость & 5 & \textbf{1} & 1/5 & 7 \\
+      \hline \textbf{A3} & Отказоустойчивость & 7 & 5 & \textbf{1} & 8 \\
+      \hline \textbf{A4} & Интерфейсы управления & 1/3 & 1/7 & 1/8 & \textbf{1} \\
       \hline
     \end{tabular}
 \end{table}
-
-\begin{itemize}
-    \item цель проектирования - разработка системы безопасности облачной среды
-    \item выделение входных и выходных данных
-    \item выделение функций
-\end{itemize}
 \end{frame}
 
 %-------------------------------------------------------------------------------
 
-\section{Критические уязвимости 2016}
+\section{Критические уязвимости 2016 г.}
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{1 2 3}
 
-\begin{table}[H]
+\begin{table}
     \begin{tabular}{|l|l|p{4cm}|l|}
-        \hline CVE ID & CVSS & Тип уязвимости & ПО \\
+        \hline \textbf{CVE ID} & \textbf{CVSS} & \textbf{Тип уязвимости} & \textbf{ПО} \\
         \hline CVE-2016-5195 & 7.2 & Получение привилегий & Linux Kernel \\
         \hline CVE-2016-6258 & 7.2 & Получение привилегий & Xen \\
         \hline CVE-2016-5696 & 5.8 & Получение данных & Linux Kernel \\
@@ -178,16 +179,16 @@
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{Dirty COW}
+\framesubtitle{Dirty COW (Copy-on-write)}
 
-%\begin{verbatim}
 {\small \texttt{\$ id \\
-{\color{green} uid=1000(dcow)} gid=1000(dcow) groups=1000(dcow) \\
-\$ g++ dcow.cpp -std=c++11 -pthread -o dcow -lutil}}
+{\color{green} uid=1000(dcow)} gid=1000(dcow) groups=1000(dcow)
+}}
 
 \vspace{\baselineskip}
 
-{\small \texttt{\$ ./dcow \\
+{\small \texttt{\$ g++ dcow.cpp -std=c++11 -pthread -lutil -o dcow \\
+\$ ./dcow \\
 Running ... \\
 Received su prompt (Password: ) \\
 Root password is: dirtyCowFun \\
@@ -208,13 +209,12 @@ Password: dirtyCowFun \\
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{1 2 3}
 
-{\scriptsize \texttt{\$ ./vulncontrol.py −d 2017−02−18 −m 5 \\
+{\scriptsize \texttt{\$ ./vulncontrol.py −d 2017−02−18 −m 5 -t \$TOKEN:\$ID \\
 CVE−2017−6074 9.3 http://www.cvedetails.com/cve/CVE−2017−6074/ \\
 CVE−2017−6001 7.6 http://www.cvedetails.com/cve/CVE−2017−6001/ \\
 CVE−2017−5986 7.1 http://www.cvedetails.com/cve/CVE−2017−5986/ \\
-Telegram alert not sent
+Telegram alert sent
 }}
 
 \begin{figure}[h]
