--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -8,6 +8,7 @@
 
 \begin{frame}
 \frametitle{\insertsection}
+\framesubtitle{Отсутствие единой организации по стандартизации}
 
 Наиболее активные рабочие группы:
 \begin{itemize}
@@ -34,6 +35,7 @@
 
 \begin{frame}
 \frametitle{\insertsection}
+\framesubtitle{По данным CSA за 2016~г.}
 
 \begin{itemize}
     \item утечка данных
@@ -53,10 +55,11 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Борьба с проблемами}
+\section{Борьба с проблемами в безопасности}
 
 \begin{frame}
 \frametitle{\insertsection}
+\framesubtitle{Примеры решений}
 
 \begin{itemize}
     \item многофакторная аутентификация (2FA)
@@ -73,10 +76,11 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Решение проблем в рамках ВКР}
+\section{Решение проблем в рамках ВКР магистра}
 
 \begin{frame}
 \frametitle{\insertsection}
+\framesubtitle{Теоретические и практические исследования}
 
 \begin{itemize}
     \item структурирование имеющейся информации по безопасности
@@ -95,6 +99,7 @@
 
 \begin{frame}
 \frametitle{\insertsection}
+\framesubtitle{Классификация и методы решения задачи}
 
 \begin{itemize}
     \item цель проектирования --- разработка системы безопасности облачной среды
@@ -122,9 +127,9 @@
         Альтернативы:
         \vspace{\baselineskip}
         \begin{itemize}
-            \item KVM
-            \item Hyper-V
-            \item VMware vSphere
+            \item KVM (M1)
+            \item Hyper-V (M2)
+            \item VMware vSphere (M3)
         \end{itemize}
     \end{column}
     \begin{column}{0.55\textwidth}
@@ -139,23 +144,24 @@
 \end{columns}
 
 \begin{table}
-    \begin{tabular}{|l|l|l|l|l|l|}
-      \hline \multicolumn{2}{|c|}{\textbf{Критерии}} & \textbf{A1} & \textbf{A2} & \textbf{A3} & \textbf{A4} \\
-      \hline \textbf{A1} & Цена & \textbf{1} & 1/5 & 1/7 & 3 \\
-      \hline \textbf{A2} & Масштабируемость & 5 & \textbf{1} & 1/5 & 7 \\
-      \hline \textbf{A3} & Отказоустойчивость & 7 & 5 & \textbf{1} & 8 \\
-      \hline \textbf{A4} & Интерфейсы управления & 1/3 & 1/7 & 1/8 & \textbf{1} \\
-      \hline
-    \end{tabular}
+    \begin{tabular}{|l|l|l|l|l|}
+        \hline  & \textbf{A1} & \textbf{A2} & \textbf{A3} & \textbf{A4} \\
+        \hline \textbf{M1} & 22,5\% & 44,97\% & 33,24\% & 2,28\% \\
+        \hline \textbf{M2} & 7,45\% & 14,75\% & 72,83\% & 4,97\% \\
+        \hline \textbf{M3} & 3,51\% & 20,78\% & 71,22\% & 4,85\% \\
+        \hline
+  \end{tabular}
 \end{table}
+
 \end{frame}
 
 %-------------------------------------------------------------------------------
 
-\section{Критические уязвимости 2016 г.}
+\section{Критические уязвимости 2016~г.}
 
 \begin{frame}
 \frametitle{\insertsection}
+\framesubtitle{По данным www.cvedetails.com}
 
 \begin{table}
     \begin{tabular}{|l|l|p{4cm}|l|}
@@ -209,6 +215,7 @@ Password: dirtyCowFun \\
 
 \begin{frame}
 \frametitle{\insertsection}
+\framesubtitle{https://github.com/Amet13/vulncontrol}
 
 {\scriptsize \texttt{\$ ./vulncontrol.py −d 2017−02−18 −m 5 -t \$TOKEN:\$ID \\
 CVE−2017−6074 9.3 http://www.cvedetails.com/cve/CVE−2017−6074/ \\
@@ -217,7 +224,7 @@ CVE−2017−5986 7.1 http://www.cvedetails.com/cve/CVE−2017−5986/ \\
 Telegram alert sent
 }}
 
-\begin{figure}[h]
+\begin{figure}
     \center
     \includegraphics[width=0.65\linewidth]{tscreen}
 \end{figure}
@@ -225,25 +232,23 @@ Telegram alert sent
 
 %-------------------------------------------------------------------------------
 
-\iffalse
-максимум 10 слайдов
-по 1 минуте на слайд
-картинки, схемы, таблицы, примеры кода, списки, скриншоты
+\section{Результаты}
 
-обзор источников
-системный анализ
-вариантный анализ
-безопасность облачных вычислений
-экспериментальные исследования
-- крит. уязвимости
-- эксплуатация dirty cow
-- vulncontrol
-анализ результатов
+\begin{frame}
+\frametitle{\insertsection}
+\framesubtitle{В рамках ВКР магистра}
 
-1. описать актуальность исследования
-2. описать текущие проблемы в облаках
-3. как эти проблемы решаются
-4. какие проблемы не решаются
-5. что я сделал для решения проблем
-...
-\fi
+\begin{itemize}
+    \item обзор литературных источников и открытых стандартов
+    \item анализ зарубежного и отечественного рынка облачных услуг
+    \item определение угроз безопасности облачных вычислений
+    \item системный анализ безопасности облачной среды
+    \item вариантный анализ для выбора оптимальной альтернативы
+    \item сбор данных по наиболее опасным уязвимостям в ПО
+    \item практическая эксплуатация уязвимости
+    \item разработка системы сбора данных по уязвимостям
+    \item публикация данных под свободной лицензией CC BY-SA 4.0, исходного кода под GPLv3
+\end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
