--- a/presentation/beamerthemeMasterThesis.sty
+++ b/presentation/beamerthemeMasterThesis.sty
@@ -2,18 +2,17 @@
 \usepackage{wrapfig}
 \usepackage{xcolor}
 \usepackage{etoolbox}
-\usepackage{hyperref}
 
 \ProvidesPackage{beamerthemeMasterThesis}[2014/06/10] % Название темы и дата создания
 \usefonttheme{default} % Стандартный шрифт темы
 
 %%% Определение цветовых схем
-\definecolor{Blue}{cmyk}{1,0.66,0,0.02}        % Pantone 286
+\definecolor{Blue}{cmyk}{1,0.66,0,0.02}        % My color
 \definecolor{Green}{cmyk}{0.69,0,1,0}          % Pantone 361
 \definecolor{Red}{cmyk}{0,0.95,1,0.29}         % Pantone 484
 \definecolor{Orange}{cmyk}{0,0.42,0.77,0}      % Pantone 131
-\setbeamercolor{WhiteOnBlue}{bg=Blue,fg=white} % White on Pantone 286
-\setbeamercolor{BlueOnWhite}{fg=Blue,bg=white} % Pantone 286 on White
+\setbeamercolor{WhiteOnBlue}{bg=Blue,fg=white} % White on my color
+\setbeamercolor{BlueOnWhite}{fg=Blue,bg=white} % My color on White
 
 %%% Гиперссылки
 \usepackage{hyperref}
