--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -23,7 +23,7 @@
 Они занимаются:
 \begin{itemize}
     \item продвижением идей соблюдения безопасности
-    \item исследованиями по защите облаков
+    \item исследованиями по защите
     \item разработкой руководств по безопасности
     \item организацией форумов по безопасности
 \end{itemize}
@@ -68,7 +68,7 @@
     \item контроль доступа, шифрование API
     \item периодические пентестинги, аудиты безопасности
     \item регулярное сканирование на наличие уязвимостией
-    \item мониторинг, аудит и логирование
+    \item мониторинг, логирование
     \item резервное копирование, репликация
     \item резервирование сетевых каналов и сегментация сети
 \end{itemize}
@@ -76,18 +76,18 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Решение проблем в рамках ВКР магистра}
+\section{Решения в рамках ВКР магистра}
 
 \begin{frame}
 \frametitle{\insertsection}
 \framesubtitle{Теоретические и практические исследования}
 
 \begin{itemize}
-    \item структурирование имеющейся информации по безопасности
+    \item сбор и структурирование имеющейся информации по безопасности
     \item системный анализ полученной информации
     \item выбор альтернатив согласно набору критериев (МАИ)
     \item практическое применение полученной информации
-    \item анализ наиболее опасных уязвимостей
+    \item анализ наиболее опасных уязвимостей 2016~г.
     \item эксплуатация уязвимостей в облачной среде
     \item создание методов быстрого реагирования на уязвимости
 \end{itemize}
@@ -185,7 +185,7 @@
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{Dirty COW (Copy-on-write)}
+\framesubtitle{<<Dirty COW>> (Copy-on-write)}
 
 {\small \texttt{\$ id \\
 {\color{green} uid=1000(dcow)} gid=1000(dcow) groups=1000(dcow)
@@ -211,7 +211,7 @@ Password: dirtyCowFun \\
 
 %-------------------------------------------------------------------------------
 
-\section{Vulncontrol}
+\section{Мониторгинг уязвимостей}
 
 \begin{frame}
 \frametitle{\insertsection}
@@ -241,13 +241,13 @@ Telegram alert sent
 \begin{itemize}
     \item обзор литературных источников и открытых стандартов
     \item анализ зарубежного и отечественного рынка облачных услуг
-    \item определение угроз безопасности облачных вычислений
+    \item определение угроз безопасности облачных вычислений и методов их решения
     \item системный анализ безопасности облачной среды
     \item вариантный анализ для выбора оптимальной альтернативы
     \item сбор данных по наиболее опасным уязвимостям в ПО
     \item практическая эксплуатация уязвимости
     \item разработка системы сбора данных по уязвимостям
-    \item публикация данных под свободной лицензией CC BY-SA 4.0, исходного кода под GPLv3
+    \item публикация исследований под свободной лицензией CC BY-SA 4.0, исходного кода под GPLv3
 \end{itemize}
 \end{frame}
 
