--- a/inc/6-experiment.tex
+++ b/inc/6-experiment.tex
@@ -420,6 +420,6 @@ Telegram alert not sent
   \end{tabular}
 \end{table}
 
-Программа представлена в прил. \hyperlink{app-a}{А}.
+Исходный код программы представлен в прил. \hyperlink{app-a}{А}.
 
 \clearpage
