--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -62,14 +62,14 @@
 \framesubtitle{Примеры решений}
 
 \begin{itemize}
-    \item многофакторная аутентификация (2FA)
-    \item стойкое шифрование (TLS)
+    \item многофакторная аутентификация (2FA/MFA)
+    \item стойкое шифрование (SSL/TLS)
     \item использование одноразовых паролей, токенов, USB-ключей, смарт-карт
     \item контроль доступа, шифрование API
     \item периодические пентестинги, аудиты безопасности
     \item регулярное сканирование на наличие уязвимостией
-    \item мониторинг, логирование
-    \item резервное копирование, репликация
+    \item мониторинг и логирование
+    \item резервное копирование и репликация
     \item резервирование сетевых каналов и сегментация сети
 \end{itemize}
 \end{frame}
